Move foxus to second level heading when popover expands

--- a/kuma/contributions/jinja2/contributions/includes/contribution-form.html
+++ b/kuma/contributions/jinja2/contributions/includes/contribution-form.html
@@ -12,7 +12,7 @@
                 <h2 class="highlight highlight-spanned">
                     <span class="highlight-span">{{ _('Give Back to MDN')}}</span>
                 </h2>
-                <h4>{{_('Support MDN, and it comes back to you.')}}</h4>
+                <h4 tabindex="-1">{{_('Support MDN, and it comes back to you.')}}</h4>
                 <p class="body">
                     {% trans %}
                         You’ve turned to MDN for information and assurance. Now
