Fix form layout on contribute page, and in popover

--- a/kuma/contributions/jinja2/contributions/includes/contribution-form.html
+++ b/kuma/contributions/jinja2/contributions/includes/contribution-form.html
@@ -7,7 +7,7 @@
     {% endif %}
     <div class="column-container">
         <img src="{{ static('img/hero-dino-blank.png') }}" class="backdrop-image" alt="" role="presentation" />
-        <div class="column-half">
+        <div class="column-half contribute-lead-in">
             <div class="container">
                 <h2 class="highlight highlight-spanned">
                     <span class="highlight-span">{{ _('Give Back to MDN')}}</span>
