--- a/jinja2/includes/style.html
+++ b/jinja2/includes/style.html
@@ -1,4 +1,5 @@
-{% stylesheet 'react-header' %}
+<!-- {% stylesheet 'react-header' %} -->
 {% stylesheet 'auth-modal' %}
-{% stylesheet 'react-mdn' %}
+<!-- {% stylesheet 'react-mdn' %} -->
+{% stylesheet 'mdn-minimalist' %}
 {% stylesheet 'subscriptions' %}
